<resources>
    <string name="add_task">Add Task</string>
    <string name="title_here">Title Here</string>
    <string name="catagory_color_placeholder">Select Your Category Color Above Or Enter A HEX Here</string>
    <string name="app_name">tasks.done</string>
    <string name="banner_ad_main_bottom_unit_id">ca-app-pub-1363931415415684/6495852251</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_developer">Developers</string>
    <string name="action_share">Share</string>
    <string name="action_demo">Demo</string>
    <string name="action_store">Get more apps</string>
    <string name="skip">Skip</string>
    <string name="auth">Authenticate</string>
    <string name="gravity_register">Registering Account to Gravity Innovations</string>
    <string name="gravity_registration_complete">Registeration Complete</string>
    <string name="gravity_registration_error">Error while registeration</string>
    <string name="gravity_fetch_data_success">Fetch Complete</string>
    <string name="gravity_fetch_data_failed">Fetch Error</string>
    <string name="gravity_sync">syncing with server</string>
    <string name="complete">Loading Complete</string>
    <string name="text_require_google_account">			You are required to login using Your current google account for using complete features of this application</string>
    <string name="check_internet">Checking Internet Connectivity</string>
    <string name="no_internet">Unable to connect to internet</string>
    <string name="google_get_user_info">Fetching user information from Google</string>
    <string name="internet_stable">Internet stablilty checked</string>
    <string name="require_internet">This application Requires Internet to sync with Google</string>
    <string name="load_sp">Loading cache</string>
    <string name="load_db">Loading database</string>
    <string name="get_google_acc">Preparing to get your information</string>
    <string name="loading_comp">Loading application components</string>
    <string name="creating_ui">Creating UI</string>
    <string name="checking_other_settings">Checking other settings</string>
    <string name="google_result_ok">Account information saved</string>
    <string name="google_result_cancel">User skiped google authentication</string>
    <string name="google_disable_sync">Disabling cloud sync with google</string>
    <string name="google_auth">Authenticating with Google</string>
    <string name="config_gcm">Configuring Communication Settings</string>
    <string name="gcm_invalid_device">Device Not supported</string>
    <string name="users_sync">Syncing users</string>
    <string name="users_sync_complete">All device users synced</string>
    <string name="users_sync_error">Error while syncing device users</string>
    <string name="gcm_play_service_success">Device validated for play store</string>
    <string name="every">Every</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="dont_remind">Don\'t Remind</string>
    <string name="delete_message_confirm">Are you Sure you want to delete?</string>
    <string name="delete_message_task">Are you sure you want to delete this task?</string>
    <string name="delete_message_list">Are you sure you want to delete this tasklist?</string>
    <string name="message_demo">For first time users it is recommended to follow this demo.\nIf you already know how to use this application, then proceed by pressing No button.</string>
    <string name="demo_start_instructions">1)It is advised to carefully read all the instructions.\n2)A new item will blink each time when a new set of instructions appear, those instructions are specifically for that blinking item\n3)Press the Next button when you are done reading the instructions.\n3)To start demo press Next</string>
    <string name="demo_nav_toggle_instructions">Pressing the current blinking item will toggle list for you revealing some extra options.</string>
    <string name="demo_press_nav_toggle">Press Next to see how toggle works when you will click on it</string>
    <string name="demo_list_create_instructions">1)Pressing the current blinking item will make a dialog appear.\n2)In that dialog,\n    a)you can give your list a title.\n    b)select a color.\n    c)select an icon.\n    d)pressing Save button will save that list.</string>
    <string name="demo_list_create_demo">We have created a dummy list for you this time. Pressing Next will save this list for you.</string>
    <string name="demo_deletelist">This button will delete selected list.</string>
    <string name="demo_editlist">This button will edit selected list.</string>
    <string name="demo_sharelist">This button is used to share selected list.</string>
    <string name="demo_watchshared">This button is used to watch the user with whom current list is shared with.</string>
    <string name="demo_listTitle">This item shows the current list title and icon.</string>
    <string name="demo_navToggle">This button is used to open side menu or navigation drawer.</string>
    <string name="demo_syncedToggle">This icon changes when current list gets synced with server.</string>
    <string name="demo_fab">This button is used to add a new task, let us add one task for you this time.</string>
    <string name="demo_task_operation_details">When you click on the blinking item it will open a detailed dialog of selected task.</string>
    <string name="demo_task_operation_toggle_instructions">1)By clicking the accept icon in the blinking item it will mark the task as complete.\n2) It is also possible to mark the task as incomplete by same method.\n2)click Next to see how it works.</string>
    <string name="demo_task_operation_markedDone">You can see your task is now marked as done.</string>
    <string name="demo_task_operation_doneToggle">When you click on the accept icon it will mark the task as done</string>
    <string name="demo_task_operation_undoneToggle">When you click on the accept icon again it will mark the task as un done</string>
    <string name="demo_task_operation_longClick">When you long click on the blinking item it shows a menu to edit, delete or view task</string>
    <string name="demo_dashboard_instructions">1)This is your Dashboard you will see all of your pending tasks from all of your lists here whenever you launch your app.\n2)There are some actions for fast navigation.\n3)Lets Explorer them.</string>
    <string name="demo_dashboard_search">1)When you click on the above blinking item you can search your desired task.\n2)Let us perform a click for you.</string>
    <string name="demo_dashboard_search_instructions">Just enter the title in above text field and you tasks will get filtered.</string>
    <string name="demo_pressBlinkingItem">1)Press GOT IT.\n2)Then press the blinking item.</string>
    <string name="demo_end">This was the last demo.\nYou are now ready to use your application.\nYou are only one Next click away from using your application.</string>
    <string name="demo_clickDashboard">Click the blinking item.</string>
    <string name="demo_title">It is important to give task a name otherwise it wont save.</string>
    <string name="demo_details">If you have some details to put into the task then write details.</string>
    <string name="demo_notes">1)If you have some notes to put into the task then write notes.\n2) You can see the accept mark on the top right side it is used to save task.\n3)We will click it for you this time</string>
    <string name="demo_allDay">Time of notification is explicitly mentioned while setting notifications.</string>
    <string name="demo_startDateTime">Start date and time of notifications.</string>
    <string name="demo_endingDateTime">End date and time of notifications.</string>
    <string name="demo_repeat">To define the repeatition interval of the notifications.</string>
    <string name="demo_notifications">You can set upto five different notifications.</string>
    <string name="mark_task_as_undone">Are you sure you want to mark this task as not done yet?</string>
    <string name="delete">Delete</string>
    <string name="demo">Demo</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="view">View</string>
    <string name="proceed">Continue</string>
    <string name="useoffline">Skip (use offline)</string>
    <string name="attl">Add The Task List</string>
    <string name="share">Share</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="minutes">Minute</string>
    <string name="hours">Hour</string>
    <string name="days">Day</string>
    <string name="weeks">Week</string>
    <string name="custom_notification">Custom Notifications</string>
    <string name="as_notification">As Notification</string>
    <string name="as_email">As Email</string>
    <string name="digitOne">1</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thr">Thr</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="event">event</string>
    <string name="dateFormat">MM/DD/YYYY</string>
    <string name="addAnotherNotification">Add another notification</string>
    <string name="notifications">Notifications</string>
    <string name="watch_a_video">Watch A Video</string>
    <string name="refer_friend">Refer A Friend</string>
    <string name="make_ad_free">Make task.done Ad Free</string>
    <string name="app_demo">Start App Demo</string>
    <string name="dashboard">Dashboard</string>
    <string name="tasks_pending">Tasks pending</string>
    <string name="search_here">Search Here</string>
    <string name="list_name">List Name</string>
    <string name="now">Now</string>
    <string-array name="array_weekdays">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="array_repeatTimes">
        <item>Forever</item>
        <item>Until a date</item>
        <item>For a fixed number of events</item>
    </string-array>
    <string-array name="array_repeatInterval">
        <item>Repeat daily</item>
        <item>Repeat weekly</item>
        <item>Repeat monthly</item>
        <item>Repeat yearly</item>
    </string-array>
</resources>