<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom|withText"
        android:title="@string/delete"
        android:titleCondensed="Delete">
    </item>
        <item
        android:id="@+id/item_view"
        android:icon="@android:drawable/ic_menu_view"
        android:showAsAction="ifRoom|withText"
        android:title="@string/view"
        android:titleCondensed="View">
    </item>
    <item
        android:id="@+id/item_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:showAsAction="ifRoom|withText"
        android:title="@string/edit"
        android:titleCondensed="Edit">
    </item>
    <item
        android:id="@+id/item_share"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="ifRoom|withText"
        android:title="@string/share"
        android:titleCondensed="Share">
    </item>
    <item
        android:id="@+id/item_set_reminder"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="ifRoom|withText"
        android:title="@string/set_reminder"
        android:titleCondensed="Set Reminder">
    </item>

</menu>