<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.gravity.innovations.tasks.done.MainActivity" >

    <item
        android:id="@+id/action_example"
        android:title="@string/action_example"
        app:showAsAction="withText|ifRoom"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_developer"
        android:orderInCategory="98"
        android:title="@string/action_developer"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_store"
        android:orderInCategory="99"
        android:title="@string/action_store"
        app:showAsAction="never"/>

</menu>
