<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="10dp"
    android:paddingTop="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="10dp"
        android:text="Custom Notifications"
        android:textStyle="bold" 
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <View
        android:id="@+id/line_notification"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line_divider" />

    <EditText
        android:id="@+id/et_numberOfNotifications"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tv1"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@+id/tv1"
        android:background="#00000000"
        android:text="01"
        android:inputType="number"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:layout_marginLeft="10dp"
        android:paddingTop="10dp"
         android:selectAllOnFocus="true" />

    <View
        android:id="@+id/line_numberOfNotifications"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line_divider" />

    <RadioGroup
        android:id="@+id/myRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/minutes"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp" >

        <RadioButton
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/minutes" />

        <RadioButton
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/hours" />

        <RadioButton
            android:id="@+id/days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/days" />

        <RadioButton
            android:id="@+id/weeks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/weeks" />
    </RadioGroup>

    <View
        android:id="@+id/line_radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/line_divider" />

    <RadioGroup
        android:id="@+id/myRadioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/notifications"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="10dp" >

        <RadioButton
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/as_notification" />

        <RadioButton
            android:id="@+id/emails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/as_email" />
    </RadioGroup>

<!--     <View -->
<!--         android:id="@+id/line_radioGroup2" -->
<!--         android:layout_width="fill_parent" -->
<!--         android:layout_height="1dp" -->
<!--         android:background="@color/line_divider" -->
<!--         android:paddingBottom="10dp" -->
<!--         android:paddingTop="10dp" /> -->

</LinearLayout>